Issue #118: Fix logo on mobile screens to not overflow screen.

--- a/app/sass/originalTheme.scss
+++ b/app/sass/originalTheme.scss
@@ -1,4 +1,12 @@
 body {
   padding-top: 50px;
   overflow-x: hidden;
+  header {
+    width: 83%;
+    a {
+      img {
+        width: 99%;
+      }
+    }
+  }
 }
